ready to send assessment bottom section alignment on chrome- fixed

--- a/app/assets/stylesheets/companies.sass
+++ b/app/assets/stylesheets/companies.sass
@@ -15,7 +15,7 @@
   .info-list
     li
       float: left
-      margin-left: 34px
+      margin-left: 32px
       &:first-child
         margin-left: 0
     .visual01
