--- a/app/assets/stylesheets/toolkit/_reset.sass
+++ b/app/assets/stylesheets/toolkit/_reset.sass
@@ -45,8 +45,11 @@ sub
 img
   max-width: 100%
   height: auto
-  border: 0
+  border: 0 none
   -ms-interpolation-mode: bicubic
+a 
+  img
+    border: none
 
 // Font size in all browsers, margin changes, misc consistency
 button, input, select, textarea
